# steamsdk-vcpkg-example

./: CMakeLists.txt  main.cpp  vcpkg.json
ports/steam-sdk/: CMakeLists.txt  portfile.cmake  vcpkg.json
